; ModuleID = '/home/carl/AnghaBench/nanomsg/tools/extr_options.c_nn_option_error.c'
source_filename = "/home/carl/AnghaBench/nanomsg/tools/extr_options.c_nn_option_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_parse_context = type { i8** }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"%s: Option\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.nn_parse_context*, i32)* @nn_option_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nn_option_error(i8* %0, %struct.nn_parse_context* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.nn_parse_context*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.nn_parse_context* %1, %struct.nn_parse_context** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @stderr, align 4
  %8 = load %struct.nn_parse_context*, %struct.nn_parse_context** %5, align 8
  %9 = getelementptr inbounds %struct.nn_parse_context, %struct.nn_parse_context* %8, i32 0, i32 0
  %10 = load i8**, i8*** %9, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 0
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 @fprintf(i32 %7, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %12)
  %14 = load %struct.nn_parse_context*, %struct.nn_parse_context** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* @stderr, align 4
  %17 = call i32 @nn_print_option(%struct.nn_parse_context* %14, i32 %15, i32 %16)
  %18 = load i32, i32* @stderr, align 4
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @fprintf(i32 %18, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %19)
  %21 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @nn_print_option(%struct.nn_parse_context*, i32, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
